# NewCEA

./: .gitignore  CMakeLists.txt  README.md  install.sh  pyproject.toml  setup.py
cmake/: SetFortranFlags.cmake
f2py-test/: dai.f90  file.py  module.f90
lib/thermo-transport/: thermo.inp  thermo.lib  thermoXCEA.inp  thermoXcantera.inp  trans.inp
src/fortran/: CEAinc.f90  CEAmod.f90  cea.f  cea2.f  main.f90
src/fortran/app/: main.f90
src/fortran/lib/: CEAinc.f90  cea2.f  obj_CEA.f90
src/python/: objCEA.py  pyCEA.py
src/python/NewCEA/: __init__.py  objCEA.py
test/: CEA.inp  CEA.out  f.out
test/f2py-test/: fib1.f  file.py
test/python/: pyCEA.py
