[build-system]
requires = ["setuptools", "wheel", "meson"]
build-backend = "setuptools.build_meta"

[project]
name = "NewCEA"
version = "1.0"
description = "A modern CEA interface for Fortran and Python codes"
authors = [
    { name = "Marco Grossi", email = "marco.grossi@uniroma1.it" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "meson",
    # other dependencies here
]

[tool.setuptools]
packages = ["NewCEA"]

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
NewCEA = ["*.so"]
