[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NewCEA"
version = "1.1.0"
description = "A modern Chemical Equilibrium Analysis interface for Fortran and Python codes"
authors = [
    {name = "Marco Grossi", email = "marco.grossi@uniroma1.it"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["chemistry", "rocket propulsion", "chemical equilibrium", "CEA"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/username/NewCEA"
Documentation = "https://github.com/username/NewCEA/docs"
Source = "https://github.com/username/NewCEA"
Tracker = "https://github.com/username/NewCEA/issues"

[tool.setuptools]
package-dir = {"" = "src/python"}
packages = ["NewCEA"]
include-package-data = true

[tool.setuptools.package-data]
"NewCEA" = ["*.so"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
